--- a/build.xml
+++ b/build.xml
@@ -123,7 +123,7 @@
     <!-- Integration Module -->
     <property name="integration.module" value="talent-studio-integration"/>
     <property name="integration.src.dir" value="${integration.module}/src"/>
-    <property name="integration.lib.dir" value="${integration.module}/lib"/>
+    <property name="integration.lib.dir" value="../integration-lib"/>
     <property name="integration.config.dir" value="${integration.module}/config"/>
 
     <!-- Standalone Moddule -->
