--- a/talent-studio-views/pom.xml
+++ b/talent-studio-views/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -23,6 +24,11 @@
             <groupId>com.zynap</groupId>
             <artifactId>talent-studio-integration</artifactId>
             <version>${ts.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.sec.version}</version>
         </dependency>
         <dependency>
             <groupId>cewolf</groupId>
@@ -60,6 +66,12 @@
             <version>1.1.3</version>
         </dependency>
         <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.12</version>
+        </dependency>
+        <!--
+        <dependency>
             <groupId>jfree</groupId>
             <artifactId>jcommon</artifactId>
             <version>1.0.9</version>
@@ -69,21 +81,12 @@
             <artifactId>jfreechart</artifactId>
             <version>1.0.5</version>
         </dependency>
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.12</version>
-        </dependency>        
-        <dependency>
-            <groupId>gnujaxp</groupId>
-            <artifactId>gnujaxp</artifactId>
-            <version>1.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
+        <dependency>-->
+            <!--<groupId>gnujaxp</groupId>-->
+            <!--<artifactId>gnujaxp</artifactId>-->
+            <!--<version>1.0.0</version>-->
+        <!--</dependency>
+        -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
@@ -153,4 +156,5 @@
             <version>2.5.6.SEC03</version>
         </dependency>
     </dependencies>
+
 </project>
