--- a/talent-studio-integration/pom.xml
+++ b/talent-studio-integration/pom.xml
@@ -20,6 +20,13 @@
             <version>v5.4.4-mt-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>com.zynap</groupId>
+            <artifactId>talent-studio-application</artifactId>
+            <version>v5.4.4-mt-SNAPSHOT</version>
+            <type>test-jar</type>
+            <scope>test-compile</scope>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.ws</groupId>
             <artifactId>spring-ws-core</artifactId>
             <version>2.2.0.RELEASE</version>
