maven style directories for integration, new module client for integration to keep it separate

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
     <modules>
         <module>talent-studio-application</module>
         <module>talent-studio-integration</module>
+        <module>talent-studio-integration-client</module>
         <module>talent-studio-views</module>
     </modules>
     
