fixed a refactoring error, removed delegate, introducing new services pattern to start using, need to try and mix, old spring and new anotation spring but having xml library problems, need to start removing these (XML removed first!)

--- a/talent-studio-views/web/src/main/java/com/zynap/talentstudio/web/reportingchart/PreferenceBasedReportingChartTagResources.properties
+++ b/talent-studio-views/web/src/main/java/com/zynap/talentstudio/web/reportingchart/PreferenceBasedReportingChartTagResources.properties
@@ -6,30 +6,30 @@ report.structure.end=\
 	</table>
 
 # formatting for Organisation Unit
-OrganisationUnit.label.noLink=\
+com.zynap.talentstudio.organisation.OrganisationUnit.label.noLink=\
 		<tr>\
 			<th class="OrgChartBox" style="background-color:${background-color};color:${color};">${value}</th>\
 		</tr>
 
-OrganisationUnit.label=\
+com.zynap.talentstudio.organisation.OrganisationUnit.label=\
 		<tr>\
 			<th class="OrgChartBox" style="background-color:${background-color};color:${color};"><a href="${url}" style="color:${color}">${value}</a></th>\
 		</tr>
 
 # formatting for Position box
 
-Position.start=\
+com.zynap.talentstudio.organisation.positions.Position.start=\
 		<tr>\
 			<td align="center">\
 				<table class="OrgChartBox" cellpadding="0" cellspacing="0">
 
-Position.end=\
+com.zynap.talentstudio.organisation.positions.Position.end=\
 				</table>\
 			</td>\
 		</tr>
 
 # formatting for Position itself
-Position.title.noLink=\
+com.zynap.talentstudio.organisation.positions.Position.title.noLink=\
 		<tr>\
 			<td class="OrgChartBox" style="background-color:${background-color};">\
 				<table>\
@@ -37,7 +37,7 @@ Position.title.noLink=\
 						<td valign="top"><img alt="Position" class="OrgChartEntry" src="../images/report/position.gif"></td>\
 						<td style="color:${color};">${value}
 
-Position.title=\
+com.zynap.talentstudio.organisation.positions.Position.title=\
 		<tr>\
 			<td class="OrgChartBox" style="background-color:${background-color};">\
 				<table>\
@@ -45,10 +45,10 @@ Position.title=\
 						<td valign="top"><img alt="Position" class="OrgChartEntry" src="../images/report/position.gif"></td>\
 						<td style="color:${color};"><a href="${url}" style="color:${color}">${value}</a>
 
-Position.dynamicAttributeValue=\
+com.zynap.talentstudio.organisation.positions.Position.dynamicAttributeValue=\
 							<br/><span id="${id}" class="OrgChartAttrLabel" title="${title}">${label}:</span><span class="OrgChartAttr">&nbsp;${value}</span>
 
-Position.inner.end=\
+com.zynap.talentstudio.organisation.positions.Position.inner.end=\
 						</td>\
 					</tr>\
 				</table>\
@@ -56,22 +56,22 @@ Position.inner.end=\
 		</tr>
 
 # formatting for primary associations
-Position.primaryAssociations.child.link=\
+com.zynap.talentstudio.organisation.positions.Position.primaryAssociations.child.link=\
 		<tr>\
 			<td align="center" colspan="2">\
 				<a id="Navigation_Link" href="${url}"><img alt="Browse down" src="../images/report/arrowdown.gif" border="0" hspace="0"/></a>\
 			</td>\
 		</tr>
 
-Position.primaryAssociations.position.start=\
+com.zynap.talentstudio.organisation.positions.Position.primaryAssociations.position.start=\
 		<tr>\
 			<td>
 
-Position.primaryAssociations.position.end=\
+com.zynap.talentstudio.organisation.positions.Position.primaryAssociations.position.end=\
 			</td>\
 		</tr>
 
-Position.primaryAssociation.line=\
+com.zynap.talentstudio.organisation.positions.Position.primaryAssociation.line=\
 		<tr>\
 			<td align="center">\
 				<table cellpadding="0" cellspacing="0">\
@@ -83,82 +83,82 @@ Position.primaryAssociation.line=\
 			</td>\
 		</tr>
 
-Position.primaryAssociations.start=\
+com.zynap.talentstudio.organisation.positions.Position.primaryAssociations.start=\
 		<tr>\
 			<td>\
 				<table align="center" cellpadding="0" cellspacing="0">
 
-Position.primaryAssociations.first=\
+com.zynap.talentstudio.organisation.positions.Position.primaryAssociations.first=\
 					<tr>\
 						<td width="50%" style="border-right: ${background-color} ${line-height} ${border};">&nbsp;</td>\
 						<td style="border-top: ${background-color} ${line-height} ${border};" width="50%">&nbsp;</td>\
 					</tr>
 
-Position.primaryAssociations.last=\
+com.zynap.talentstudio.organisation.positions.Position.primaryAssociations.last=\
 					<tr>\
 						<td width="50%" style="border-top: ${background-color} ${line-height} ${border}; border-right: ${background-color} ${line-height} ${border};">&nbsp;</td>\
 						<td width="50%">&nbsp;</td>\
 					</tr>
 
-Position.primaryAssociations.default=\
+com.zynap.talentstudio.organisation.positions.Position.primaryAssociations.default=\
 					<tr>\
 						<td width="50%" style="border-top: ${background-color} ${line-height} ${border}; border-right: ${background-color} ${line-height} ${border};">&nbsp;</td>\
 						<td style="border-top: ${background-color} ${line-height} ${border};" width="50%">&nbsp;</td>\
 					</tr>
 
-Position.primaryAssociations.end=\
+com.zynap.talentstudio.organisation.positions.Position.primaryAssociations.end=\
 				</table>\
 			</td>\
 		</tr>
 
-Position.primaryAssociations.item.start=\
+com.zynap.talentstudio.organisation.positions.Position.primaryAssociations.item.start=\
 			<td valign="top" align="center">\
 				<table height="100%" width="100%" cellpadding="0" cellspacing="0">
 
-Position.primaryAssociations.item.end=\
+com.zynap.talentstudio.organisation.positions.Position.primaryAssociations.item.end=\
 				</table>\
 			</td>
 
 # formatting for lines connecting primary associations to position
 
-Position.primaryAssociations.connectors.start=\
+com.zynap.talentstudio.organisation.positions.Position.primaryAssociations.connectors.start=\
 		<tr>
 
-Position.primaryAssociations.connectors.table.start=\
+com.zynap.talentstudio.organisation.positions.Position.primaryAssociations.connectors.table.start=\
 			<td>\
 				<table width="100%" cellpadding="0" cellspacing="0">
 
-Position.primaryAssociations.connectors.table.end=\
+com.zynap.talentstudio.organisation.positions.Position.primaryAssociations.connectors.table.end=\
 				</table>\
 			</td>
 
-Position.primaryAssociations.connectors.end=\
+com.zynap.talentstudio.organisation.positions.Position.primaryAssociations.connectors.end=\
 		</tr>
 
 # formatting for Position parent
 
-Position.parent.start=\
+com.zynap.talentstudio.organisation.positions.Position.parent.start=\
 		<tr>\
 			<td align="center">\
 				<table cellpadding="0" cellspacing="0">
 
-Position.parent.link=\
+com.zynap.talentstudio.organisation.positions.Position.parent.link=\
 					<tr>\
 						<td align="center" colspan="2">\
 							<a id="Navigation_Link" href="${url}"><img alt="Browse up" src="../images/report/arrowup.gif" border="0" hspace="0"/></a>\
 						</td>\
 					</tr>
 
-Position.parent.end=\
+com.zynap.talentstudio.organisation.positions.Position.parent.end=\
 				</table>\
 			</td>\
 		</tr>
 
 # formatting for Subjects
 
-Position.primarySubjects.start=<tr><td class="OrgChartBox OrgChartAssocLabel">Incumbents</td></tr>
+com.zynap.talentstudio.organisation.positions.Position.primarySubjects.start=<tr><td class="OrgChartBox OrgChartAssocLabel">Incumbents</td></tr>
 
-SubjectAssociation.start=\
+com.zynap.talentstudio.organisation.subjects.SubjectAssociation.start=\
 		<tr>\
 			<td class="OrgChartBox" style="background-color:${background-color};color:${color};">\
 				<table>\
@@ -166,23 +166,23 @@ SubjectAssociation.start=\
 						<td valign="top"><img alt="" class="OrgChartPicEntry" src="${pictureUrl}"></td>\
 						<td style="background-color:${background-color};color:${color};">
 
-Subject.start=<a style="color:${color};" href="${url}">
+com.zynap.talentstudio.organisation.subjects.Subject.start=<a style="color:${color};" href="${url}">
 
-Subject.name=${label}
+com.zynap.talentstudio.organisation.subjects.Subject.name=${label}
 
-Subject.dynamicAttributeValue=\
+com.zynap.talentstudio.organisation.subjects.Subject.dynamicAttributeValue=\
 							<br/><span id="${id}" class="OrgChartAttrLabel" title="${title}">${label}:</span><span class="OrgChartAttr">&nbsp;${value}</span>
 
-Subject.end=</a>
+com.zynap.talentstudio.organisation.subjects.Subject.end=</a>
 
-SubjectAssociation.end=\
+com.zynap.talentstudio.organisation.subjects.SubjectAssociation.end=\
 						</td>\
 					</tr>\
 				</table>\
 			</td>\
 		</tr>
 
-Position.primarySubjects.end=
+com.zynap.talentstudio.organisation.positions.Position.primarySubjects.end=
 
-Position.secondarySubjects.start=<tr><td class="OrgChartBox OrgChartAssocLabel">Successors</td></tr>
-Position.secondarySubjects.end=
+com.zynap.talentstudio.organisation.positions.Position.secondarySubjects.start=<tr><td class="OrgChartBox OrgChartAssocLabel">Successors</td></tr>
+com.zynap.talentstudio.organisation.positions.Position.secondarySubjects.end=
