fixing the send questionnaire email notification

--- a/talent-studio-views/config/spring/ts-views.properties
+++ b/talent-studio-views/config/spring/ts-views.properties
@@ -567,3 +567,5 @@ viewmybrowseprogress.class=org.springframework.web.servlet.view.JstlView
 viewmybrowseprogress.url=/WEB-INF/jsp/talentarena/myprogress.jsp
 wordlist.class=org.springframework.web.servlet.view.JstlView
 wordlist.url=/WEB-INF/jsp/common/search/wordlist.jsp
+successView.class=org.springframework.web.servlet.view.JstlView
+successView.url=/WEB-INF/jsp/common/success.jsp
