building maven profiles, may still need to use ant

--- a/pom.xml
+++ b/pom.xml
@@ -271,6 +271,9 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>tme</id>
+        </profile>
     </profiles>
 
     <repositories>
