moved ts-views to be default added to the classes directory of the war add a webResources directory to the spring folder so these files could be default added to the web-inf directory, modified the build to look elsewhere for the ts-views files

--- a/talent-studio-views/pom.xml
+++ b/talent-studio-views/pom.xml
@@ -163,6 +163,12 @@
                 <version>2.6</version>
                 <configuration>
                     <webXml>src/main/webapp/WEB-INF/web.xml</webXml>
+                    <webResources>
+                        <resource>
+                            <!-- this is relative to the pom.xml directory -->
+                            <directory>config/spring</directory>
+                        </resource>
+                    </webResources>
                 </configuration>
             </plugin>
         </plugins>
