--- a/build.xml
+++ b/build.xml
@@ -642,7 +642,7 @@
 
         <!-- copy and filter web app config files excluding the ts-views file which needs to go into WEB-INF/classes -->
         <copy todir="${build.webview.war.webinf.dir}" filtering="true" overwrite="true">
-            <fileset dir="${war.config.spring.dir}" excludes="**/${war.config.spring.file}"/>
+            <fileset dir="${war.config.spring.dir}"/>
             <filterset refid="app.config.filterset"/>
         </copy>
 
@@ -677,7 +677,7 @@
         </copy>
 
         <!-- copy and filter Spring view config file to classes directory -->
-        <copy todir="${build.webview.war.classes.dir}" file="${war.config.spring.dir}/${war.config.spring.file}" filtering="true" overwrite="true">
+        <copy todir="${build.webview.war.classes.dir}" file="${war.resources.dir}/${war.config.spring.file}" filtering="true" overwrite="true">
             <filterset refid="app.config.filterset"/>
         </copy>
 
